# ubo_app

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  buf.yaml  pyproject.toml  setup_scm_schemes.py
.github/workflows/: ci.yml  integration.yml  integration_delivery.yml  publish_to_pypi.yml  release.yml
scripts/: Dockerfile.dev  Dockerfile.test  consume.sh  deploy.sh  print_version.py  test_on_device.sh
scripts/packer/: image-local.pkr.hcl  image.pkr.hcl
tests/: .env  __init__.py  conftest.py  monkeypatch.py  setup.sh  snapshot.py  test_general_health.py  test_services.py
tests/end_to_end/: test_wireless_flow.py
tests/fixtures/: __init__.py  app.py  load_services.py  menu.py  mock_camera.py  mock_environment.py  snapshot.py  stability.py  store.py
tests/flows/: __init__.py  conftest.py  test_wifi.py  test_wireless.py  test_wireless_flow.py
tests/flows/wireless/: setup.sh  test_.py
tests/integration/: test_core.py  test_services.py
tests/reproduction/: test_menu.py
tests/results/: test_all_services_register-000.hash
tests/store/: test_subscribe_event.py
tests/utils/: import_tracker.py
typings/: ubo_handle.pyi
typings/kivy/: _clock.pyi  _event.pyi
typings/kivy/uix/: widget.pyi
ubo_app/: .env  .test.env  __init__.py  _ignore_this_in_back_track.py  _loop.py  bootstrap.py  colors.py  constants.py  display.py  error_handlers.py  home_page.kv  keypad.py  load_services.py  logger.py  logging.py  logic.py  main.py  menu.py  menu_central.py  menu_footer.py  py.typed  service.py  service_thread.py  services.py  setup.py  setup_service.py  side_effects.py  stuff.py
ubo_app/engines/: google_cloud.py  openai.py
ubo_app/engines/abstraction/: background_running_mixin.py  needs_setup_mixin.py
ubo_app/menu_app/: home_page.kv  home_page.py  menu.py  menu_central.py  menu_footer.py  menu_header.py  menu_notification_handler.py  notification_info.kv  notification_info.py
ubo_app/rpc/: README.md  client.py  generate_proto.py  message_to_object.py  object_to_message.py  parent_version.py  pyproject.toml  sample_python_client.py  secrets_service.py  server.py  service.py  store_service.py
ubo_app/rpc/generator/: __init__.py  _module_transformer.py  _types.py  generate_proto.py
ubo_app/rpc/proto/package_info/v1/: package_info.proto
ubo_app/rpc/proto/secrets/v1/: secrets.proto
ubo_app/rpc/proto/store/v1/: store.proto
ubo_app/rpc/proto/ubo/v1/: ubo.proto
ubo_app/rpc/ubo_bindings/: client.py  parent_version.py
ubo_app/services/: 0-wifi.toml
ubo_app/services/0-camera/: __init__.py  reducer.py  setup.py  ubo_handle.py
ubo_app/services/0-ethernet/: constants.py  ethernet_manager.py  setup.py  ubo_handle.py
ubo_app/services/0-ip/: constants.py  reducer.py  setup.py
ubo_app/services/0-keyboard/: __init__.py  setup.py  ubo_handle.py
ubo_app/services/0-keypad/: __init__.py  rpi_keypad.py  setup.py  ubo_handle.py
ubo_app/services/0-notifications/: reducer.py  ubo_handle.py
ubo_app/services/0-rgb-ring/: reducer.py  rgb_ring_client.py  rgb_ring_manager.py  setup.py
ubo_app/services/0-sound/: __init__.py  audio_manager.py  constants.py  reducer.py  setup.py  ubo_handle.py
ubo_app/services/0-wifi/: __init__.py  constants.py  pyrightconfig.json  reducer.py  setup.py  wifi_manager.py  wpa_cli.py
ubo_app/services/000-audio/: audio_manager.py  constants.py  reducer.py  setup.py  ubo_handle.py
ubo_app/services/000-display/: reducer.py  setup.py  ubo_handle.py
ubo_app/services/000-keypad/: reducer.py  setup.py  ubo_handle.py
ubo_app/services/000-rgb-ring/: reducer.py  rgb_ring_client.py  ubo_handle.py
ubo_app/services/000-sound/: audio_manager.py  constants.py  reducer.py  setup.py  ubo_handle.py
ubo_app/services/010-ethernet/: constants.py  ubo_handle.py
ubo_app/services/010-ip/: reducer.py  setup.py  ubo_handle.py
ubo_app/services/010-notifications/: reducer.py  ubo_handle.py
ubo_app/services/010-speech-synthesis/: constants.py  download_model.py  reducer.py  setup.py  ubo_handle.py
ubo_app/services/010-voice/: reducer.py  setup.py  ubo_handle.py
ubo_app/services/010-wifi/: reducer.py  setup.py  ubo_handle.py  wifi_manager.py
ubo_app/services/020-keyboard/: setup.py  shortcuts.md  ubo_handle.py
ubo_app/services/020-keypad/: setup.py  ubo_handle.py
ubo_app/services/030-ethernet/: constants.py  ethernet_manager.py  setup.py  ubo_handle.py
ubo_app/services/030-ip/: constants.py  reducer.py  setup.py  ubo_handle.py
ubo_app/services/030-wifi/: constants.py  reducer.py  setup.py  ubo_handle.py  wifi_manager.py
ubo_app/services/040-camera/: reducer.py  setup.py  ubo_handle.py
ubo_app/services/090-assistant/ubo-service/: pyproject.toml  setup_scm_schemes.py
ubo_app/services/090-assistant/ubo-service/ubo_assistant/: __init__.py  constants.py  file_source.py  main.py  parent_version.py  piper.py  segmented_googlestt.py  switch.py  ubo_input_transport.py  ubo_llm.py  ubo_output_transport.py  ubo_stt.py  ubo_tts.py  vosk.py
ubo_app/store/: __init__.py  _menus.py  app.py  camera.py  dispatch_action.py  keypad.py  led_ring.py  main.py  main_selectors.py  notifications.py  operations.py  reducer.py  rgb_ring.py  schedular.py  scheduler.py  sound.py  status_icons.py  ubo_actions.py  update_manager.py  update_manager_types.py  wifi.py
ubo_app/system/: __init__.py  bootstrap.py  hotspot_config.py  install.sh  install_docker.sh  install_wm8960.sh  polkit-reboot.rules  polkit.rules  redirect_server.py
ubo_app/system_services/: bootstrap.py  install.sh  install_wm8960.sh  led.service  main.service  polkit-reboot.rules  setup_services.py  update.service
ubo_app/utils/: __init__.py  apt.py  async_.py  bus_provider.py  dataclass.py  dbus_interfaces.py  download.py  eeprom.py  error_handlers.py  fake.py  file_system.py  garbage_collection.py  gui.py  hardware.py  input.py  log_process.py  loop.py  miscellaneous.py  monitor_unit.py  network.py  persistent_store.py  pod_id.py  qrcode.py  raw_content_viewer.kv  secrets.py  serializer.py  server.py  service.py  store.py  template_files.py  thread.py  types.py
(+351 files in other folders)
